Fix `.masthead` and `.page__footer` overlapping full screen video elements. - Close #933

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -483,7 +483,7 @@ a.reversefootnote {
 
 /*
    Responsive Video Embed
-      ========================================================================== */
+   ========================================================================== */
 
 .responsive-video-container {
   position: relative;
@@ -504,3 +504,9 @@ a.reversefootnote {
   }
 }
 
+// full screen video fixes
+:-webkit-full-screen-ancestor {
+   .masthead,
+   .page__footer {
+  position: static;
+}
